tests/sema/fail/v36_fail_shift_count_type.ep
# COMPILE_FAIL_CONTAINS: operator >> shift count expected i64, got u64
fun main(): void {
    let value = u64(8) >> u64(1)
}
